--- a/client/src/Styles/Department/Department-Display.css
+++ b/client/src/Styles/Department/Department-Display.css
@@ -1,5 +1,6 @@
 .main{
-    margin: 50px 0;
+    padding: 50px 0;
+    background: linear-gradient(to bottom, #d8e6ff99 50%, #fff 90%);
 }
 
 .display{
