--- a/client/src/Styles/Department/Popup.css
+++ b/client/src/Styles/Department/Popup.css
@@ -2,4 +2,7 @@
     max-width: 600px;
     max-height: 70vh;
     overflow-y: auto;
+    scrollbar-width: none;
+    /* scrollbar-width: thin;
+    scrollbar-color: #7ea9ef #fff; */
 }
