Changed the mail button color and president card shadow

--- a/client/src/Styles/Leaders/President-Card.css
+++ b/client/src/Styles/Leaders/President-Card.css
@@ -1,3 +1,4 @@
 .president-card{
-    box-shadow: 0px 0px 6px 0px #00000040;
+    box-shadow: 2px 2px 6px 0px #00000040,
+                -1px 0px 6px 0px #00000040;
 }
