--- a/client/src/Styles/Department/Popup.css
+++ b/client/src/Styles/Department/Popup.css
@@ -2,6 +2,7 @@
     max-width: 600px;
     max-height: 69.5vh;
     overflow-y: auto;
+    overflow-x: auto;
     scrollbar-width: none;
     /* scrollbar-width: thin;
     scrollbar-color: #7ea9ef #fff; */
