--- a/client/src/Styles/Department/Department-Display.css
+++ b/client/src/Styles/Department/Department-Display.css
@@ -6,6 +6,8 @@
 .display{
     padding: 20px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     gap: 20px;
     max-width: 1200px;
