--- a/client/src/Styles/Department/Department-Card.css
+++ b/client/src/Styles/Department/Department-Card.css
@@ -1,10 +1,10 @@
 .department-card{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
     transition: box-shadow 0.3s;
-    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
     gap: 16px;
     padding: 20px 24px;
     -webkit-box-shadow: 0 4px 12px rgba(207, 216, 220, .4);
@@ -12,7 +12,7 @@
     border-radius: 8px;
     min-width: 330px;
     max-width: 330px;
-    min-height: 150px;
+    min-height: 330px;
     background-color: #fff;
 
     cursor: pointer;
